[eunji][#update] AdminController, admin.html 수정 및 데이터는 다 가져옴.

--- a/KosaESS/src/main/resources/static/css/admin.css
+++ b/KosaESS/src/main/resources/static/css/admin.css
@@ -14,10 +14,14 @@
 	width: calc(100% - 250px);
 }
 
-.home-section .text {
+.home-section .title {
 	display: inline-block;
 	color: #11101d;
 	font-size: 25px;
-	font-weight: 500;
+	font-weight: bold;
 	margin: 18px
+}
+
+.content_wrap {
+	margin: 18px;
 }
