--- a/KosaESS/src/main/resources/templates/managerClassList.html
+++ b/KosaESS/src/main/resources/templates/managerClassList.html
@@ -6,14 +6,20 @@
 <link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
 </head>
 <body>
-		<p>
-		나와야 되는거<br>
-		1순위 : 리스트(체크박스{생략}, 번호, 프로그램명, 교육기간, 교육 장소, 신청원/현재원, 교육상태[교육시작 전, 교육중, 교육완료, 취소, 폐강])<br>
-		2순위 : 교육상태[전체, 교육 시작 전, 교육중, 교육완료, 취소, 폐강]에 따른 분류
-		</p>
+	2순위 : 교육상태[전체, 교육 시작 전, 교육중, 교육완료, 취소, 폐강]에 따른 분류
+	<form>
+		<input type="text">
+		<input type="button" value="검색">
+	</form>
+	<form>
+		<input type="checkbox" value="전체">
+		<input type="checkbox">
+	</form>
+
 	<table>
 		<tr>
-<!-- 			<th>번호</th> -->
+			<th><input type="checkbox"></th>
+			<th>번호</th>
 			<th>프로그램명</th>
 			<th>교육기간</th>
 			<th>교육 장소</th>
@@ -21,11 +27,14 @@
 			<th>교육상태</th>
 		</tr>
 		<tr th:each="class:${classList}">
-<!-- 			<td th:text="${#status.count}">row number</td> -->
+			<td><input type="checkbox"></td>
+			<td th:text="${classStat.count}">row number</td>
 			<td th:text="${class.clssNm}">class name</td>
-			<td>[[${class.clssStartDd}]]<br>~<br> [[${class.clssEndDd}]]</td>
+			<td>[[${class.clssStartDd}]]<br>~<br>
+				[[${class.clssEndDd}]]
+			</td>
 			<td th:text="${class.clssAdr}">class address</td>
-			<td th:text="${class.limitCnt}">capability</td>
+			<td>[[${class.aplyCnt}]] / [[${class.limitCnt}]]</td>
 			<td th:text="${class.clssCd}">status</td>
 		</tr>
 	</table>
