--- a/KosaESS/src/main/resources/templates/managerClassDetail.html
+++ b/KosaESS/src/main/resources/templates/managerClassDetail.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Manager Class Detail</title>
 </head>
 <body>
-
+	<table>
+		<tr>
+			<th>이름</th>
+			<th>지원 기간</th>
+			<th>교육 기간</th>
+			<th>강사 이름</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+	</table>
 </body>
 </html>
