--- a/KosaESS/src/main/resources/templates/managerClassList.html
+++ b/KosaESS/src/main/resources/templates/managerClassList.html
@@ -30,7 +30,7 @@
 		<tr th:each="class:${classList}">
 			<td><input type="checkbox"></td>
 			<td th:text="${classStat.count}">row number</td>
-			<td th:text="${class.clssNm}">class name</td>
+			<td><a th:href="@{/manager/class/__${class.clssId}__}">[[${class.clssNm}]]</a></td>
 			<td>[[${class.clssStartDd}]]<br>~<br>
 				[[${class.clssEndDd}]]
 			</td>
