--- a/KosaESS/src/main/resources/templates/managerClassDetail.html
+++ b/KosaESS/src/main/resources/templates/managerClassDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Manager Class Detail</title>
@@ -10,11 +10,30 @@
 			<th>이름</th>
 			<th>지원 기간</th>
 			<th>교육 기간</th>
-			<th>강사 이름</th>
-			<th></th>
-			<th></th>
-			<th></th>
+			<th>교육 장소</th>
+			<th>교육 상태</th>
+			<th>시작 시간</th>
+			<th>종료 시간</th>
+			<th>수강 정원</th>
+			<th>업무담당자</th>
+		</tr>
+		<tr>
+			<td th:text="${class.clssNm}"></td>
+			<td th:text="${class.aplyStartDd} ~ ${class.aplyStartDd}"></td>
+			<td th:text="${class.clssStartDd} ~ ${class.clssEndDd}"></td>
+			<td th:text="${class.clssAdr}"></td>
+			<td th:text="${class.clssCd}"></td>
+			<td th:text="${class.setInTm}"></td>
+			<td th:text="${class.setOutTm}"></td>
+			<td><a th:href="@{/manager/class/__${class.clssId}__/student}">[[${class.aplyCnt}]]</a> / ${class.limitCnt}</td>
+			<td th:text="${class.mngrId}"></td>
 		</tr>
 	</table>
+	<div>
+	이미지 나열하기
+	</div>
+	<div th:utext="post.postContent">
+	</div>
+	<a th:href="@{/manager/class}"><input type="button" name="목록"></a>
 </body>
 </html>
