[eunji][#update]파일명 수정

--- a/KosaESS/src/main/resources/templates/manager_main.html
+++ b/KosaESS/src/main/resources/templates/manager_main.html
@@ -28,7 +28,7 @@
 					<div class="bx_wait_content">
 						<!-- total count -->
 						<div class="total_cnt">
-							<a th:href="@{#}" ><span class="cnt" th:text="${data.value}">count</span></a>
+							<a th:href="@{/admin/inquiry}" ><span class="cnt" th:text="${data.value}">count</span></a>
 							<span class="cnt_txt">건</span>
 						</div>
 					</div>
