[dabin][#update] student관련 파일명 수정]

--- a/KosaESS/src/main/resources/templates/main_manager.html
+++ b/KosaESS/src/main/resources/templates/main_manager.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/include/header :: header}">
+<head>
 <meta charset="UTF-8">
 <title>Main</title>
 </head>
 <head>
 <link th:href="@{/css/main_manager.css}" rel="stylesheet">
+
 </head>
 <body>
 	<div th:replace="~{/include/subbar :: subbar}"></div>
