--- a/KosaESS/src/main/resources/templates/student_main.html
+++ b/KosaESS/src/main/resources/templates/student_main.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link th:href="@{/css/header_student.css}" rel="stylesheet">
-<link th:href="@{/css/main_student.css}" rel="stylesheet">
+<link th:href="@{/css/student_header.css}" rel="stylesheet">
+<link th:href="@{/css/student_main.css}" rel="stylesheet">
 <meta charset="UTF-8">
 <title>main page</title>
 </head>
 <body>
-	<div th:replace="~{/include/header_student :: header}" style="width: 100%;"></div>
+	<div th:replace="~{/include/student_header :: header}" style="width: 100%;"></div>
 	<div class="container">
 		<div class="maintext">
 			<h1 style="color: #0E5881;">새로운 교육을 통해서 더 나은 내일로</h1>
