--- a/KosaESS/src/main/resources/templates/student_login.html
+++ b/KosaESS/src/main/resources/templates/student_login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link th:href="@{/css/header_student.css}" rel="stylesheet">
-<link th:href="@{/css/main_student.css}" rel="stylesheet">
+<link th:href="@{/css/student_header.css}" rel="stylesheet">
+<link th:href="@{/css/student_main.css}" rel="stylesheet">
 
 <meta charset="UTF-8">
 <title>login page</title>
 </head>
 <body>
-	<div th:replace="~{/include/header_student :: header}" style="width: 100%;"></div>
+	<div th:replace="~{/include/student_header :: header}" style="width: 100%;"></div>
 	<div class="container" style="float: none; margin: 0 auto;">
 		<div class="content" style="align-items: center; height: 100vh;">
 			<div class="login con">
