--- a/KosaESS/src/main/resources/templates/manager_post_list.html
+++ b/KosaESS/src/main/resources/templates/manager_post_list.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/include/header :: header}">
+<head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
 <title>Main</title>
 </head>
 <head>
-<link th:href="@{/css/managerpostlist.css}" rel="stylesheet">
+<link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
 </head>
 <body>
 	<!-- 서브바 부분 -->
-	<div th:replace="~{/include/subbar :: subbar}"></div>
+	<div th:replace="~{/include/manager_subbar :: subbar}"></div>
 	<!-- End 서브바 -->
 
 	<!-- 컨텐츠 부분 -->
