[eunji][#update] manager_class 부분 수정, manager_post 부분 수정

--- a/KosaESS/src/main/resources/static/css/manager_post_list.css
+++ b/KosaESS/src/main/resources/static/css/manager_post_list.css
@@ -52,3 +52,56 @@
 	font-size: 20px;
 	border: 1px solid;
 }
+
+.search_filter_table tr td input {
+	height:100%;
+}
+
+.search_filter_btn_wrap {
+	text-align: center;
+}
+
+.search_filter_btn_wrap .search_filter_btn {
+	width: 60px;
+	background-color: #0E5881;
+	margin: 10px 0 10px 0;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.post_detail_wrap .post_total_cnt {
+	font-weight: bold;
+	float:left;
+}
+
+.post_detail_wrap .post_total_cnt .post_cnt{
+	color: #0E5881;
+}
+
+.post_detail_wrap .post_btn_wrap {
+	float: right;
+}
+
+.post_detail_wrap .post_btn_wrap button {
+	width: 80px;
+	background-color: #0E5881;
+	margin-left: 10px;
+	color: white;
+	font-weight: bold;
+	font-size: 15px;
+}
+
+.post_list_table{
+	width:100%;
+}
+
+.post_list_table tr td {
+	text-align: center;
+}
+
+.post_list_table tr td a {
+	text-decoration: none;
+	color: #0E5881;
+	font-weight: bold;
+}
