--- a/KosaESS/src/main/resources/templates/manager_main.html
+++ b/KosaESS/src/main/resources/templates/manager_main.html
@@ -17,18 +17,44 @@
 		<div class="content_wrap">
 			<!-- box wrap -->
 			<div class="bx_wait_wrap">
-			
-			
 				<!-- for문으로 받은만큼 돌리기 -->
 				<!-- box -->
-				<div class="bx_wait" th:each="data: ${dataMap}"> 
+				<div class="bx_wait"> 
 					<!-- box sub title -->
-					<div class="bx_wait_sub_title" th:text="${data.key}">subTitle</div>
+					<div class="bx_wait_sub_title">교육과정 접수중</div>
 					<!-- box content -->
 					<div class="bx_wait_content">
 						<!-- total count -->
 						<div class="total_cnt">
-							<a th:href="@{/admin/inquiry}" ><span class="cnt" th:text="${data.value}">count</span></a>
+							<a th:href="@{/admin/class}" ><span class="cnt" th:text="${cntList[0]}">count</span></a>
+							<span class="cnt_txt">건</span>
+						</div>
+					</div>
+				</div>
+				
+				<!-- box -->
+				<div class="bx_wait"> 
+					<!-- box sub title -->
+					<div class="bx_wait_sub_title">이수완료 대기중</div>
+					<!-- box content -->
+					<div class="bx_wait_content">
+						<!-- total count -->
+						<div class="total_cnt">
+							<a th:href="@{/admin/class}" ><span class="cnt" th:text="${cntList[1]}">count</span></a>
+							<span class="cnt_txt">건</span>
+						</div>
+					</div>
+				</div>
+				
+				<!-- box -->
+				<div class="bx_wait"> 
+					<!-- box sub title -->
+					<div class="bx_wait_sub_title">문의답변 대기중</div>
+					<!-- box content -->
+					<div class="bx_wait_content">
+						<!-- total count -->
+						<div class="total_cnt">
+							<a th:href="@{/admin/inquiry}" ><span class="cnt" th:text="${cntList[2]}">count</span></a>
 							<span class="cnt_txt">건</span>
 						</div>
 					</div>
