--- a/KosaESS/src/main/resources/templates/student_login.html
+++ b/KosaESS/src/main/resources/templates/student_login.html
@@ -8,25 +8,22 @@
 <title>login page</title>
 </head>
 <body>
-	<div th:replace="~{/include/student_header :: header}" style="width: 100%;"></div>
+	<div th:replace="~{/include/student_header :: header}"
+		style="width: 100%;"></div>
 	<div class="container" style="float: none; margin: 0 auto;">
 		<div class="content" style="align-items: center; height: 100vh;">
-			<div class="login con">
+			<div class="login con" style="width: 40%;">
 				<form th:action="@{/login}" method="post" class="">
 					<div class="">
-						<div class="">
-							<label for="stdtEmail"></label> <input type="text"
-								name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
-						</div>
+						<label for="stdtEmail"></label> <input type="text"
+							name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
 					</div>
 					<div class="">
-						<div class="">
-							<label for="stdtPwd"></label> <input type="password"
-								name="stdtPwd" id="pwd" class=" " placeholder="비밀번호">
-						</div>
+						<label for="stdtPwd"></label> <input type="password"
+							name="stdtPwd" id="pwd" class=" " placeholder="비밀번호">
 					</div>
 					<div class="">
-						<input type="submit" class="" th:value="로그인">
+						<input type="submit" class="loginBtn" th:value="로그인">
 					</div>
 					<div>
 						<a th:href="@{/findPwd}" class="">비밀번호 찾기</a> <a
