--- a/KosaESS/src/main/resources/templates/student_main.html
+++ b/KosaESS/src/main/resources/templates/student_main.html
@@ -7,7 +7,8 @@
 <title>main page</title>
 </head>
 <body>
-	<div th:replace="~{/include/student_header :: header}" style="width: 100%;"></div>
+	<div th:replace="~{/include/student_header :: header}"
+		style="width: 100%;"></div>
 	<div class="container">
 		<div class="maintext">
 			<h1 style="color: #0E5881;">새로운 교육을 통해서 더 나은 내일로</h1>
@@ -19,11 +20,12 @@
 					<h2>접수중인 교육</h2>
 					<hr>
 					<table>
-						<tr th:each="ClassVO : ${classList}">
+						<tr th:each="classVO : ${classList}">
 							<td style="width: 80%;"><a
-								th:href="@{class/__${ClassVO.clssId}__}"
-								th:text="${ClassVO.clssNm}"></a></td>
-							<td style="width: 20%;" th:text="${ClassVO.rgstDtString}"></td>
+								th:href="@{/class/__${classVO.clssId}__}"
+								th:text="${classVO.clssNm}"></a></td>
+							<td style="width: 20%; text-align: right;"
+								th:text="${classVO.aplyStartDd} + ' ~' + ${classVO.aplyEndDd}"></td>
 						</tr>
 					</table>
 				</div>
@@ -34,25 +36,22 @@
 					<div th:if="${session.stdtEmail==null}">
 						<form th:action="@{/login}" method="post" class="">
 							<div class="">
-								<div class="">
-									<label for="stdtEmail"></label> <input type="text"
-										name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
-								</div>
+								<label for="stdtEmail"></label> <input type="text"
+									name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
 							</div>
 							<div class="">
-								<div class="">
-									<label for="stdtPwd"></label> <input type="password"
-										name="stdtPwd" id="pwd" class=" " placeholder="비밀번호">
-								</div>
+								<label for="stdtPwd"></label> <input type="password"
+									name="stdtPwd" id="pwd" class=" " placeholder="비밀번호">
 							</div>
-							<div class="col-sm-offset-2 col-sm-8">
-								<input type="submit" class="" th:value="로그인">
+							<div class="">
+								<input type="submit" class="loginBtn" th:value="로그인">
+							</div>
+							<div>
+								<a th:href="@{/findPwd}" class="">비밀번호 찾기</a> <a
+									th:href="@{/insert}" class="">회원가입</a>
 							</div>
 						</form>
-						<div>
-							<a th:href="@{/findPwd}" class="">비밀번호 찾기</a> <a
-								th:href="@{/insert}" class="">회원가입</a>
-						</div>
+
 					</div>
 					<div th:if="${session.stdtEmail!=null}">
 						<div class="">
@@ -79,11 +78,12 @@
 						<h2>공지사항</h2>
 						<hr>
 						<table>
-							<tr th:each="PostVO : ${postList}">
+							<tr th:each="postVO : ${postList}">
 								<td style="width: 75%;"><a
-									th:href="@{notice/__${PostVO.postId}__}"
-									th:text="${PostVO.postTitle}"></a></td>
-								<td style="width: 25%;" th:text="${PostVO.rgstDtString}"></td>
+									th:href="@{notice/__${postVO.postId}__}"
+									th:text="${postVO.postTitle}"></a></td>
+								<td style="width: 25%; text-align: right;"
+									th:text="${postVO.rgstDd}"></td>
 							</tr>
 						</table>
 					</div>
