--- a/KosaESS/src/main/resources/templates/manager_class_detail.html
+++ b/KosaESS/src/main/resources/templates/manager_class_detail.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
 <title>Manager Class Detail</title>
+<link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
+</head>
+<head>
+<link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
 </head>
 <body>
-	<table>
-		<tr>
-			<th>이름</th>
-			<th>지원 기간</th>
-			<th>교육 기간</th>
-			<th>교육 장소</th>
-			<th>교육 상태</th>
-			<th>시작 시간</th>
-			<th>종료 시간</th>
-			<th>수강 정원</th>
-			<th>업무담당자</th>
-		</tr>
-		<tr>
-			<td th:text="${clss.clssNm}"></td>
-			<td>[[${clss.aplyStartDt}]] ~ [[${clss.aplyStartDt}]]</td>
-			<td>[[${clss.clssStartDd}]] ~ [[${clss.clssEndDd}]]</td>
-			<td th:text="${clss.clssAdr}"></td>
-			<td th:text="${clss.clssCd}"></td>
-			<td th:text="${clss.setInTm}"></td>
-			<td th:text="${clss.setOutTm}"></td>
-			<td>[[${clss.aplyCnt}]] / [[${clss.limitCnt}]]</td>
+	<!-- 서브바 부분 -->
+	<div th:replace="~{/include/manager_subbar :: subbar}"></div>
+	<!-- End 서브바 -->
 
-			<td th:text="${clss.mngrId}"></td>
-		</tr>
-	</table>
-	<div th:each="item:${fileIdList}">
-		<div th:text="${item}"></div>
+	<!-- 컨텐츠 부분 -->
+	<div class="home-section">
+		<!-- title -->
+		<div class="title" th:text="${title}">Title</div>
+		<!-- content wrap-->
+		<div class="content_wrap">
+			<!-- 검색 필터 부분 -->
+			<div class="search_filter_wrap"></div>
+			<table>
+				<tr>
+					<th>이름</th>
+					<th>지원 기간</th>
+					<th>교육 기간</th>
+					<th>교육 장소</th>
+					<th>교육 상태</th>
+					<th>시작 시간</th>
+					<th>종료 시간</th>
+					<th>수강 정원</th>
+					<th>업무담당자</th>
+				</tr>
+				<tr>
+					<td th:text="${clss.clssNm}"></td>
+					<td th:text="|${clss.aplyStartDt} ~ ${clss.aplyStartDt}|"></td>
+					<td th:text="|${clss.clssStartDd} ~ ${clss.clssEndDd}|"></td>
+					<td th:text="${clss.clssAdr}"></td>
+					<td th:text="${clss.clssCd}"></td>
+					<td th:text="${clss.setInTm}"></td>
+					<td th:text="${clss.setOutTm}"></td>
+					<td th:text="|${clss.aplyCnt} / ${clss.limitCnt}|"></td>
+					<td th:text="${clss.mngrId}"></td>
+				</tr>
+			</table>
+			<div th:each="item:${fileIdList}">
+				<img th:src="@{/manager/fileId/__${item}__}">
+			</div>
+
+			<div th:utext="${clss.clssContent}"></div>
+			<a th:href="@{/manager/class}">
+				<p>목?록</p>
+			</a>
+		</div>
 	</div>
-
-	<div th:utext="${clss.clssContent}"></div>
-	<a th:href="@{/manager/class}">
-		<div>목?록</div>
-	</a>
 </body>
 </html>
