--- a/KosaESS/src/main/resources/templates/manager_student_list.html
+++ b/KosaESS/src/main/resources/templates/manager_student_list.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Manager Class List</title>
+<link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
+</head>
+<head>
+<link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
 </head>
 <body>
+	<!-- 서브바 부분 -->
+	<div th:replace="~{/include/manager_subbar :: subbar}"></div>
+	<!-- End 서브바 -->
 
+	<!-- 컨텐츠 부분 -->
+	<div class="home-section">
+		<!-- title -->
+		<div class="title" th:text="${title}">Title</div>
+
+		<!-- content wrap-->
+		<div class="content_wrap">
+			<!-- 검색 필터 부분 -->
+			<div class="search_filter_wrap">
+				<!-- 아이콘 삽임 부분 -->
+				<div class="search_filter_icon">
+					<img class="search_filter_icon_img" th:src="@{/img/filter.png}">
+				</div>
+				<!-- 아이콘 삽임 부분 -->
+			</div>
+
+			<!-- 검색 필터 테이블 -->
+			<div class="search_filter_table_wrap">
+				<table class="search_filter_table" style="width: 100%;">
+					<tr>
+						<td style="width: 10%;">교육과정명</td>
+						<td style="width: 30%;"><input style="width: 100%;"
+							type="text"></td>
+						<td style="width: 10%;">상태</td>
+						<td style="width: 50%;"><span
+							th:each="classCodeName:${classCodeNameList}"> <input
+								type="checkbox" checked="checked"> <label
+								th:text="${classCodeName}"></label>
+						</span></td>
+
+					</tr>
+					<tr th:if="${session.role == 'admin'}">
+						<td style="width: 10%;">지원기간</td>
+						<td style="width: 30%;"><input type="date"> <span>
+								~ </span> <input type="date"></td>
+						<td style="width: 10%;">교육기간</td>
+						<td style="width: 50%;"><input type="date"> <span>
+								~ </span> <input type="date"></td>
+					</tr>
+				</table>
+
+				<!-- 검색 버튼 -->
+				<div class="search_filter_btn_wrap">
+					<button class="search_filter_btn">검색</button>
+				</div>
+				<!-- End 검색 버튼 -->
+				<p th:text = "|${aplyCnt} 명|"></p>
+				<table>
+				<tr>
+					<th>체크박스</th>
+					<th>번호</th>
+					<th>이름</th>
+					<th>성별</th>
+					<th>생년-월일</th>
+					<th>이메일</th>
+					<th>연락처</th>
+					<th>이수여부</th><!--교육생 상태로 고치는게 어떤지? -->
+				</tr>
+				</table>
+			</div>
+			<!-- End 검색 필터 부분 -->
+		</div>
+	</div>
 </body>
 </html>
