--- a/KosaESS/src/main/resources/templates/manager_class_list.html
+++ b/KosaESS/src/main/resources/templates/manager_class_list.html
@@ -81,7 +81,7 @@
 					<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
 					<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
 					<td th:text="${class.clssAdr}">class address</td>
-					<td><a th:text="${class.aplyCnt}" th:href="@{/manager/student}"></a><span th:text="|/ ${class.limitCnt}|"></span></td><!--req_param 추가할것 -->
+					<td><a th:text="${class.aplyCnt}" th:href="@{/manager/student-list/__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td><!--req_param 추가할것 -->
 					<td th:text="${class.clssCd}">status</td>
 				</tr>
 			</table>
