--- a/KosaESS/src/main/resources/templates/manager_student_list.html
+++ b/KosaESS/src/main/resources/templates/manager_student_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
-<title>Manager Class List</title>
+<title>Manager Student List</title>
 <link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
 </head>
 <head>
@@ -16,7 +16,7 @@
 	<!-- 컨텐츠 부분 -->
 	<div class="home-section">
 		<!-- title -->
-		<div class="title" th:text="${title}">Title</div>
+		<div class="title" th:text="|${title} : ${thisClassName}|">Title</div>
 
 		<!-- content wrap-->
 		<div class="content_wrap">
@@ -34,8 +34,12 @@
 				<table class="search_filter_table" style="width: 100%;">
 					<tr>
 						<td style="width: 10%;">교육과정명</td>
-						<td style="width: 30%;"><input style="width: 100%;"
-							type="text"></td>
+<!-- 						<td style="width: 30%;"><input style="width: 100%;" type="text"></td> -->
+						<td style="width: 30%;">
+							<select >
+								<option th:each="className:${classNameList}" th:text="${className.clssNm}" th:value="${className.clssId}"></option>
+							</select>
+						</td>
 						<td style="width: 10%;">상태</td>
 						<td style="width: 50%;"><span
 							th:each="classCodeName:${classCodeNameList}"> <input
@@ -53,23 +57,32 @@
 								~ </span> <input type="date"></td>
 					</tr>
 				</table>
-
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
 					<button class="search_filter_btn">검색</button>
 				</div>
 				<!-- End 검색 버튼 -->
-				<p th:text = "|${aplyCnt} 명|"></p>
+				<p th:text = "|${stdtCnt} 명|"></p>
 				<table>
 				<tr>
-					<th>체크박스</th>
+					<th><input type="checkbox"></th>
 					<th>번호</th>
 					<th>이름</th>
 					<th>성별</th>
-					<th>생년-월일</th>
+					<th>생년월일</th>
 					<th>이메일</th>
 					<th>연락처</th>
 					<th>이수여부</th><!--교육생 상태로 고치는게 어떤지? -->
+				</tr>
+				<tr th:each="stdt:${stdtList}">
+					<td><input type="checkbox"></td>
+					<td th:text="${stdtStat.count}"></td>
+					<td><a th:text="${stdt.stdtNm}" th:href="@{manager/student/{studentId}}"></a></td>
+					<td th:text="${stdt.genderCd}">성별</td>
+					<td th:text="${stdt.birthDd}">생년월일</td>
+					<td th:text="${stdt.stdtEmail}">이메일</td>
+					<td th:text="${stdt.stdtTel}">연락처</td>
+					<td th:text="${stdt.stdtCd}">이수여부</td>
 				</tr>
 				</table>
 			</div>
