--- a/KosaESS/src/main/resources/templates/manager_class_list.html
+++ b/KosaESS/src/main/resources/templates/manager_class_list.html
@@ -100,30 +100,14 @@
 					<th>신청/최대</th>
 					<th>교육상태</th>
 				</tr>
-<<<<<<< HEAD
-				<tr th:each="class:${classList}">
-					<td><input type="checkbox"></td>
-					<td th:text="${classStat.count}">row number</td>
+				<tr id="class_list" th:each="class:${classList}">
+					<td><input type="checkbox" name="chk" th:value="${class.clssId}"></td>
+					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row number</td>
+					<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
 					<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
 					<td th:text="|${class.clssStartDd} ~ ${class.clssEndDd}|">
-=======
-				<tr id="class_list" th:each="class:${classList}">
-					<td><input type="checkbox" name="chk"
-						th:value="${class.clssId}"></td>
-					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row
-						number</td>
-					<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
-					<td><a class="content_title"
-						th:href="@{/manager/class/__${class.clssId}__}">[[${class.clssNm}]]</a></td>
-					<!--교육생 상세정보로 이동 -->
-					<td><span th:text="${class.aplyStartDt}"></span> <br>~<br>
-						<span th:text="${class.aplyEndDt}"></span></td>
-
-					<td><span th:text="${class.clssStartDd}"></span> <br>~<br>
-						<span th:text="${class.clssEndDd}"></span></td>
->>>>>>> branch 'main' of https://github.com/zoooz0616/KOSAEducationSupportSystemProject.git
 					<td th:text="${class.clssAdr}">class address</td>
-					<td><a th:text="${class.aplyCnt}" th:href="@{/manager/student-list/__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td><!--req_param 추가할것 -->
+					<td><a th:text="${class.rgstCnt}" th:href="@{/manager/student-list/__${class.clssId}__}"></a><span th:text="|/ ${class.limitCnt}|"></span></td>
 					<td th:text="${class.clssCd}">status</td>
 				</tr>
 			</table>
