[dabin][#add]교육리스트 화면 추가 ]

--- a/KosaESS/src/main/resources/templates/student_mypage.html
+++ b/KosaESS/src/main/resources/templates/student_mypage.html
@@ -7,8 +7,10 @@
 <title>main page</title>
 </head>
 <body>
-	<div th:replace="~{/include/student_header :: header}" style="width: 100%;"></div>
+	<div th:replace="~{/include/student_header :: header}"
+		style="width: 100%;"></div>
 	<div class="container">
+		<div class="content"></div>
 	</div>
 
 </body>
