--- a/KosaESS/src/main/resources/static/css/student_main.css
+++ b/KosaESS/src/main/resources/static/css/student_main.css
@@ -19,14 +19,13 @@ body {
 }
 
 .container {
+	padding: 0px 8%;
 	margin-top: 100px;
 }
 
 .content {
 	display: flex;
-	padding-left: 7%;
-	padding-right: 7%;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .con {
@@ -58,11 +57,12 @@ table a:hover {
 hr {
 	border: 0px;
 	border-top: 5px solid #0E5881;
+	margin-bottom:2%;
 }
 
 table td {
 	font-size: 16px;
-	padding: 2px 0px;
+	padding: 4px 0px;
 	font-weight: 500;
 	margin: 0px;
 }
@@ -96,7 +96,7 @@ input::placeholder {
 }
 
 .submit {
-	margin-top: 3%;	
+	margin-top: 3%;
 }
 
 .my {
