--- a/KosaESS/src/main/resources/templates/student_class_detail.html
+++ b/KosaESS/src/main/resources/templates/student_class_detail.html
@@ -9,6 +9,34 @@
 <body>
 	<div th:replace="~{/include/student_header :: header}"
 		style="width: 100%;"></div>
-	<div class="container"></div>
+	<div class="container">
+		<div class="content">
+			<table>
+				<tr>
+					<th>이름</th>
+					<th>지원 기간</th>
+					<th>교육 기간</th>
+					<th>교육 장소</th>
+					<th>교육 상태</th>
+					<th>시작 시간</th>
+					<th>종료 시간</th>
+					<th>수강 정원</th>
+					<th>회사</th>
+				</tr>
+				<tr>
+					<td th:text="${clss.clssNm}"></td>
+					<td th:text="${clss.aplyStartDd} + ' ~' + ${clss.aplyEndDd}"></td>
+					<td th:text="${clss.clssStartDd}+ ' ~' + ${clss.clssEndDd}"></td>
+					<td th:text="${clss.clssAdr}"></td>
+					<td th:text="${clss.clssCd}"></td>
+					<td th:text="${clss.setInTm}"></td>
+					<td th:text="${clss.setOutTm}"></td>
+					<td th:text="${clss.limitCnt}"></td>
+					<td th:text="${clss.cmpyId}"></td>
+				</tr>
+			</table>
+
+		</div>
+	</div>
 </body>
 </html>
