--- a/KosaESS/src/main/resources/templates/student_main.html
+++ b/KosaESS/src/main/resources/templates/student_main.html
@@ -15,24 +15,24 @@
 			<h3 style="color: #6E9BB3;">넌 해야만 해. 할 수 있어.</h3>
 		</div>
 		<div class="content">
-			<div class="con-left" style="width: 50%;">
-				<div class="class con" style= "height: 88%;">
+			<div class="con-left" style="width: 55%;">
+				<div class="class con" style= "height: 85%;">
 					<h2>접수중인 교육</h2>
 					<hr>
 					<table>
 						<tr th:each="classVO : ${classList}">
-							<td style="width: 85%;"><a
+							<td style="width: 73%;"><a
 								th:href="@{/class/__${classVO.clssId}__}"
 								th:text="${classVO.clssNm}"></a></td>
-							<td style="width: 15%; text-align: right; font-size: 13px;"
-								th:text="${classVO.aplyStartDd} + ' ~' + ${classVO.aplyEndDd}"></td>
+							<td style="width: 27%; text-align: right;"
+								th:text="${classVO.aplyStartDd} + ' ~ ' + ${classVO.aplyEndDd}"></td>
 						</tr>
 					</table>
 				</div>
 			</div>
 			<div class="con-right" style="width: 40%;">
 				<div class="login con"
-					style="margin-bottom: 5%; text-align: center; height: 36%">
+					style="margin-bottom: 5%; text-align: center; height: 37%">
 					<div th:if="${session.stdtEmail==null}">
 						<form th:action="@{/login}" method="post" class="">
 							<div class="">
@@ -69,13 +69,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="notice con" style="background: #E7EFF3; height: 40%">
+				<div class="notice con" style="background: #E7EFF3; height: 38%">
 					<div>
 						<h2>공지사항</h2>
 						<hr>
 						<table>
 							<tr th:each="postVO : ${postList}">
-								<td style="width: 75%; padding: 4px 0px;"><a
+								<td style="width: 75%;"><a
 									th:href="@{notice/__${postVO.postId}__}"
 									th:text="${postVO.postTitle}"></a></td>
 								<td style="width: 25%; text-align: right;"
