--- a/KosaESS/src/main/resources/templates/login.html
+++ b/KosaESS/src/main/resources/templates/login.html
@@ -15,12 +15,12 @@
 			<div class="login con" style="width: 40%;">
 				<form th:action="@{/login}" method="post" class="">
 					<div class="">
-						<label for="stdtEmail"></label> <input type="text"
-							name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
+						<label for="email"></label> <input type="text"
+							name="email" id="id" class="" placeholder="아이디(이메일)">
 					</div>
 					<div class="">
-						<label for="stdtPwd"></label> <input type="password"
-							name="stdtPwd" id="pwd" class=" " placeholder="비밀번호">
+						<label for="pwd"></label> <input type="password"
+							name="pwd" id="pwd" class="" placeholder="비밀번호">
 					</div>
 					<div class="submit">
 						<input type="submit" class="loginBtn" th:value="로그인">
